[SETUPAPI] Fix wrong registry key opened by SetupDiCreateDeviceInterfaceRegKeyW() The funstion should create/open "Device Parameters" subkey of a device reference key (and return a handle to it), instead of device instance subkey. - Fix SetupDiCreateDeviceInterfaceRegKeyW() to open (and return a handle to) the correct registry key. - Fix its usage in internal InstallOneInterface() helper, which is called by SetupDiInstallDeviceInterfaces(). This fixes audio devices enumeration failure of winmm.dll from Windows 2000 SP4 (and unneeded creation of wrong registry keys) when using ReactOS with audio stack replacement from Windows XP/2003. CORE-19986